refactor: Response와 Request의 static, final 수정, vo 패키지 추가